# myti

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: auth.py  backend.py  config.py  main.py  settings.py  utils.py
app/routers/: aws.py  cog.py  mosaic.py  ui.py
app/templates/: index.html
notebooks/: workspace.ipynb
