[project]
name = "myti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.23",
    "folium>=0.20.0",
    "gdal>=3.11.3",
    "ipykernel>=6.30.1",
    "ipyleaflet>=0.20.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "pyaml>=25.7.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rasterio>=1.4.3",
    "titiler-core>=0.23.1",
    "titiler-mosaic>=0.23.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
]

ignore = [
    "E501", # line-too-long
    "T201",  # Print Statement
]

[tool.ruff.format]
docstring-code-format = true
